# cc_module

./: CMakeLists.txt  README.md
cmake/: cc_module.cmake
demo1/: .gitignore  CMakeLists.txt
demo1/include/infra/: infra_type.h
demo1/include/service/: service_entity.h
demo1/src/domain/: domain_entity.c
demo2/: CMakeLists.txt
demo2/cmake/: cc_module.cmake
demo2/src/: CMakeLists.txt
demo2/src/domain/: CMakeLists.txt  domain_entity.c
demo2/src/infra/: CMakeLists.txt
demo2/src/service/: CMakeLists.txt  service_entity.c
include/domain/: domain_entity_id.h
include/infra/: infra_log.h
src/: main.c
src/domain/: domain_entity.h
src/domain/pri/: domain_state.h
